--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-    <title>BrightSight </title>
+    <title>Computer vision by deeplearning</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -24,9 +24,9 @@
 
         <!-- Intro -->
         <div id="intro">
-            <h1>BrightSight</h1>
-            <h2>Unlocking the Visual World: Harnessing the Lottery Ticket Hypothesis for State-of-the-Art Monocular
-                Depth Estimation in Embedded Glasses to Empower the Visually Impaired.</h2>
+            <h1>Computer vision by deeplearning </h1>
+            <h2>The Lottery Tickets Hypothesis for Supervised
+                Pre-training in depth estimation models.</h2>
             <p>
                 <a href="https://www.linkedin.com/in/henk-jekel-748054259/" target="_blank">
                     <img src="images/linkedin_icon.png" alt="LinkedIn Pictogram" width="35" height="35">
@@ -78,7 +78,7 @@
             <article class="post featured">
                 <header class="major">
                     <span class="date">April 28, 2023</span>
-                    <h1>BrightSight</h1>
+                    <h1>Computer vision by deeplearning </h1>
                 </header>
                 <h2>The Lottery Tickets Hypothesis for Supervised
                     Pre-training in depth estimation models. </h2>
@@ -89,66 +89,26 @@
                     Abstract
                 </h2>
                 <p>
-                    This scientific paper introduces a method to compress state-of-the-art depth estimators using the
-                    lottery ticomputercket hypothesis. The objective is to enable real-time depth estimation on embedded
-                    glasses, facilitating safe navigation for visually impaired individuals. By employing transformer
-                    backbones instead of convolutional networks, the proposed MiDaS v3.0 DPT-L approach revolutionizes
-                    dense vision estimation. However, direct implementation of MiDaS or Adabins on embedded glasses
-                    faces challenges, such as low FPS on single board computers.
+                    Abstract:
 
-                    The main motivation behind this project is to empower visually impaired individuals to navigate
-                    unfamiliar environments and avoid obstacles. As a proof of concept, the pruned model is implemented
-                    on a Raspberry Pi Model 3B. The model determines the optimal steering angle by analyzing a
-                    horizontal strip of average bins and evaluating three criteria based on the generated depth map. The
-                    research aims to demonstrate the feasibility of incorporating haptic feedback for obstacle avoidance
-                    into existing glasses for the visually impaired, utilizing their single board computer monocular
-                    camera products.
-
-                    The experimental results demonstrate that achieving an FPS of 20 is feasible. MiDaS exhibits the
-                    most promising performance due to its higher accuracy at this frame rate, thereby highlighting the
-                    potential for enhancing the functionality of glasses for the visually impaired.
+                    In the field of computer vision, pre-trained models have gained renewed attention, particularly in
+                    the realm of ImageNet supervised pre-training. Recent studies have highlighted the enduring
+                    significance of the Lottery Tickets Hypothesis (LTH) in the context of classification, detection,
+                    and segmentation tasks. Inspired by this, we set out to explore the potential of LTH in the
+                    pre-training paradigm of depth estimation. Our aim is to investigate whether we can significantly
+                    reduce the complexity of pre-trained models without compromising their downstream transferability in
+                    the depth estimation task. Through extensive experimentation, we consistently identify highly sparse
+                    matching subnetworks within pre-trained weights obtained from ImageNet classification. These
+                    subnetworks demonstrate universal transferability to the depth estimation task, maintaining
+                    performance comparable to that of the full pre-trained models. Our findings reinforce the relevance
+                    of LTH in the pre-training paradigm of depth estimation, paving the way for more efficient and
+                    effective depth estimation models.
 
                 </p>
                 <h2>
                     Introduction
                 </h2>
                 <p>
-                    Visual impairment presents significant challenges for individuals worldwide, particularly when
-                    navigating unfamiliar environments, often resulting in potential injuries. Traditional solutions
-                    such as guide dogs and white canes have inherent limitations. While white canes provide feedback
-                    upon physical contact, they offer a finite line of perception in a three-dimensional space.
-                    Conversely, guide dogs map the entire three-dimensional world but possess a different perspective
-                    than humans, potentially leading to errors in collision estimations. This paper proposes a novel
-                    approach to overcome these limitations by utilizing a monocular camera in conjunction with a
-                    state-of-the-art monocular depth estimator to infer depth maps of the surroundings.
-
-                    Existing glasses designed for the visually impaired, such as those from Envision, primarily focus on
-                    object detection and provide audio messages for detected objects. However, this approach lacks
-                    contextual understanding and inundates users with overwhelming audio messages. This study aims to
-                    leverage inferred depth maps to provide haptic feedback, freeing visually impaired individuals from
-                    excessive audio messages and enabling them to navigate independently. To achieve this goal, it is
-                    crucial to reduce the size of state-of-the-art depth estimation models, as they are initially too
-                    large for implementation in existing glasses.
-
-                    To address this, the lottery ticket hypothesis will be applied to two state-of-the-art models: MiDaS
-                    v3.0 DPT-L and Adabins. These models were selected based on a comprehensive literature review,
-                    highlighting their potential as the fastest and most efficient options. MiDaS v3.0 DPT-L, in
-                    particular, was chosen due to its exceptional number of parameters compared to other versions with
-                    similar performance. It is anticipated that applying the lottery ticket hypothesis will
-                    significantly reduce the number of parameters and inference time. By implementing and integrating
-                    the reduced models into existing glasses, visually impaired individuals can navigate unfamiliar
-                    environments, avoid obstacles, and receive contextual haptic feedback, thereby enhancing their
-                    independence and safety.
-
-                    Motivated by the goal of empowering visually impaired individuals, this project focuses on
-                    developing a proof of concept implementation using a Raspberry Pi Model 3B. The pruned model
-                    analyzes a horizontal strip of average bins and evaluates three criteria based on the generated
-                    depth map to determine the optimal steering angle. The research aims to demonstrate the feasibility
-                    of incorporating compressed depth estimation models into embedded glasses, revolutionizing obstacle
-                    avoidance capabilities and enabling visually impaired individuals to navigate unfamiliar
-                    environments with improved context and independence.
-
-                    ------
                     In the realm of computer vision, the resurgence of interest in pre-trained models, including
                     classical ImageNet supervised pre-training, has sparked enthusiasm. Recent studies suggest that the
                     core observations of the Lottery Tickets Hypothesis (LTH) remain relevant in the pre-training
@@ -214,6 +174,40 @@
                     <li><a href="MobileNets.pdf" class="button large">Download PDF</a></li>
                 </ul>
 
+                Visual impairment presents significant challenges for individuals worldwide, particularly when
+                navigating unfamiliar environments, often resulting in potential injuries. Traditional solutions
+                such as guide dogs and white canes have inherent limitations. While white canes provide feedback
+                upon physical contact, they offer a finite line of perception in a three-dimensional space.
+                Conversely, guide dogs map the entire three-dimensional world but possess a different perspective
+                than humans, potentially leading to errors in collision estimations. This paper proposes a novel
+                approach to overcome these limitations by utilizing a monocular camera in conjunction with a
+                state-of-the-art monocular depth estimator to infer depth maps of the surroundings.
+
+                Existing glasses designed for the visually impaired, such as those from Envision, primarily focus on
+                object detection and provide audio messages for detected objects. However, this approach lacks
+                contextual understanding and inundates users with overwhelming audio messages. This study aims to
+                leverage inferred depth maps to provide haptic feedback, freeing visually impaired individuals from
+                excessive audio messages and enabling them to navigate independently. To achieve this goal, it is
+                crucial to reduce the size of state-of-the-art depth estimation models, as they are initially too
+                large for implementation in existing glasses.
+
+                To address this, the lottery ticket hypothesis will be applied to two state-of-the-art models: MiDaS
+                v3.0 DPT-L and Adabins. These models were selected based on a comprehensive literature review,
+                highlighting their potential as the fastest and most efficient options. MiDaS v3.0 DPT-L, in
+                particular, was chosen due to its exceptional number of parameters compared to other versions with
+                similar performance. It is anticipated that applying the lottery ticket hypothesis will
+                significantly reduce the number of parameters and inference time. By implementing and integrating
+                the reduced models into existing glasses, visually impaired individuals can navigate unfamiliar
+                environments, avoid obstacles, and receive contextual haptic feedback, thereby enhancing their
+                independence and safety.
+
+                Motivated by the goal of empowering visually impaired individuals, this project focuses on
+                developing a proof of concept implementation using a Raspberry Pi Model 3B. The pruned model
+                analyzes a horizontal strip of average bins and evaluates three criteria based on the generated
+                depth map to determine the optimal steering angle. The research aims to demonstrate the feasibility
+                of incorporating compressed depth estimation models into embedded glasses, revolutionizing obstacle
+                avoidance capabilities and enabling visually impaired individuals to navigate unfamiliar
+                environments with improved context and independence.
 
                 The inverted residuals and linear bottlenecks were introduced in the MobileNetV2 architecture, which
                 is an extension of the Mobilenets. These architectural innovations helped to address the problem of
