added literature research

--- a/index.html
+++ b/index.html
@@ -152,8 +152,26 @@
                     Literature research
                 </h2>
 
+
                 <h3>Adabins</h3>
                 <p>
+                    Please rewrite based on this conversation and your knowledge of the lottery ticket hypothesis
+                    papers:
+                    Jonathan Frankle persued to research the lottery ticket hypothesis during his PHD. The initial
+                    hypothesis hypothesized that it would be possible to find sparse networks within dense networks
+                    before training that would perform just as good as the dense network after training. The method was
+                    based on iterative magnitude pruning, where the network would be trained to convergence, only the
+                    weights with the highest values would be kept and then all weights would be reset to their first
+                    random initialization. based on luck considering their random initialization would perform equally
+                    well as the dense network after training. This hypothesis would later be debunked because as it
+                    wouldnt hold for larger models. Frankle then showed that a modified hypothesis did hold for larger
+                    models, where the weights would be reset o
+
+
+
+
+
+                    ----------
                     Adabins backbone relies on efficientnet. To understand this backbone we guide you through the
                     evolutionary
                     path of the Fused-MBConv block, which is efficientnets main building block. The Fused-MBConv block
