setting up headers

--- a/index.html
+++ b/index.html
@@ -187,6 +187,18 @@
                 <h2>
                     Methods
                 </h2>
+                <p>
+                    This section descripes the experiments done. First the models used are described after which the 
+                </p>
+                <h3>
+                    Models
+                </h3>
+                <h4>
+                    Masking
+                </h4>
+                <h3>
+                    Training procedure
+                </h3>
                 <!-- 
                 <p>
                     DARTS (Differentiable Architecture Search) is a method for automating the search for neural
