even push tussen door

--- a/index.html
+++ b/index.html
@@ -188,17 +188,28 @@
                     Methods
                 </h2>
                 <p>
-                    This section descripes the experiments done. First the models used are described after which the 
+                    This section descripes the experiments done. First the models used are described after which the exact 
+                    mask used will be described. The final part of this section describes all specifics about the 
+                    training procedure.
                 </p>
                 <h3>
-                    Models
+                    Model
                 </h3>
+                <p>
+                    The model architecture used was proposed by Laina et al. (2016), the model uses ResNet-50 as a base and a self-designed upsampling end.  
+                </p>
                 <h4>
                     Masking
                 </h4>
                 <h3>
                     Training procedure
                 </h3>
+                <h2>
+                    Results
+                </h2>
+                <p>
+                    Qualitive and quantitive
+                </p>
                 <!-- 
 
                 <p>
